--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aos": "^2.3.4",
+    "bootstrap": "^5.1.3",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "react-scroll": "^1.8.6",
+    "react-type-animation": "^1.1.2",
+    "swiper": "^8.0.7"
   },
   "devDependencies": {
     "eslint": "8.11.0",
